--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,6 @@
 name: dada_app
-description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+description: "تطبيق إدارة صالة DADA GYM الرياضية"
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -25,6 +23,7 @@ dependencies:
   provider: ^6.1.5
   mobile_scanner: ^7.0.1
   flutter_facebook_auth: ^7.1.2
+  flutter_secure_storage: ^9.2.4
   
 dev_dependencies:
   flutter_test:
@@ -37,7 +36,6 @@ flutter:
 
   assets:
     - assets/images/logo.png
-
 
 flutter_launcher_icons:
   android: true
