--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   mobile_scanner: ^7.0.1
   flutter_facebook_auth: ^7.1.2
   flutter_secure_storage: ^9.2.4
+  crypto: ^3.0.6
   
 dev_dependencies:
   flutter_test:
